[package]
name = "v_os"
version = "0.1.0"
authors = ["Varunml3 <66573927+Varunml3@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"